# epodpisyBE

./: .dockerignore  .env.example  Dockerfile  README.md  audit.json  cloudbuild.yaml  cors.json  frontend_description.md  openapi.yaml  openapi_send.yaml  openapi_signing.yaml  pyproject.toml  requirements.txt  signed_endpoint_clarification.md
.claude/: settings.local.json
app/: __init__.py  analysis.py  auth.py  config.py  email.py  exceptions.py  gcs.py  main.py  models.py  supabase_client.py
app/nia/: __init__.py  saml.py
app/otp/: __init__.py  twilio_verify.py
app/pdf/: __init__.py  convert.py  evidence.py  pades.py  sign.py  validate_signature.py
app/routers/: analysis.py  auth_router.py  health.py  internal.py  nia.py  signing.py
app/services/: signing_processor.py
app/utils/: datetime_utils.py  (+4 more)
migrations/: 001_add_signing_session_columns.sql  002_add_workspace_stamp_config.sql  003_add_signer_signature_placement.sql  004_add_nia_identity_columns.sql
pades-kms-signer/: README.md  audit.json  dependency-reduced-pom.xml  pom.xml  sample.txt
scripts/: add_idempotency_columns.sql  bootstrap_gcp.sh  deploy_cloudrun.sh  document_events.sql  document_signers.sql  documents.sql  golden_deploy.sh  signing_sessions.sql  smoke_test_preview.sh  workspace_members.sql  workspaces.sql
sql/: email_templates.sql
tests/: conftest.py  test_author_and_pdf_url.py  test_datetime_utils.py  test_email_retry.py  test_idempotency.py  test_nia.py  test_otp.py  test_pdf_signing.py  test_placement_validation.py  test_rate_limiter.py  test_security.py  test_verification.py
(+4 files in other folders)
